# space-shooter

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  cmake_install.cmake
dependencies/include/glad/: glad.h
shaders/: fragment.glsl  vertex.glsl
shaders/bbox/: fragment.glsl
shaders/hud/: fragment.glsl  vertex.glsl
shaders/light/: fragment.glsl  vertex.glsl
shaders/object/: fragment.glsl  geometry.glsl  vertex.glsl
shaders/simple/: fragment.glsl
shaders/skybox/: vertex.glsl
src/: Application.cxx  Application.h  Callback.cxx  Callback.h  common.h  configuration.h  main.cxx
src/core/: Application.cxx  Application.h  Callback.cxx  Callback.h  Camera.cpp  Camera.h  CameraPosition.h  HUD.cpp  HUD.h  Scene.cpp  Scene.h  Track.cpp  Track.h
src/model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h
src/objects/: Asteroid.cpp  Asteroid.h  Object.cpp  Object.h  ParticleSystem.cpp  ParticleSystem.h  Player.cpp  Player.h  Spaceship.cpp  Spaceship.h  Star.cpp  Star.h  Torpedo.cpp  Torpedo.h
src/representation/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  TextureMapType.h
src/utils/: Box.h  Direction.h  Helpers.h  QuatHelpers.cpp  QuatHelpers.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  glad.c
